--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
@@ -376,7 +376,7 @@ spec:
                           format: int64
                           type: integer
                         revisionHash:
-                          description: RevisionHash record the hash value of the spec of ApplicationConfiguration object. We're going to deprecate that by using AppRevisionHash
+                          description: RevisionHash record the hash value of the spec of ApplicationRevision object.
                           type: string
                       required:
                       - name
@@ -1529,7 +1529,7 @@ spec:
                             format: int64
                             type: integer
                           revisionHash:
-                            description: RevisionHash record the hash value of the spec of ApplicationConfiguration object. We're going to deprecate that by using AppRevisionHash
+                            description: RevisionHash record the hash value of the spec of ApplicationRevision object.
                             type: string
                         required:
                         - name
