--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ vendor/
 pkg/test/vela
 config/crd/bases
 tmp/
+_tmp/
 
 references/cmd/cli/fake/source.go
 references/cmd/cli/fake/chart_source.go
