--- a/charts/vela-core/templates/defwithtemplate/ingress.yaml
+++ b/charts/vela-core/templates/defwithtemplate/ingress.yaml
@@ -36,8 +36,9 @@ spec:
         	metadata:
         		name: context.name
         	spec: {
-        		selector:
+        		selector: {
         			"app.oam.dev/component": context.name
+        		}
         		ports: [
         			for k, v in parameter.http {
         				port:       v
