add v1beta1 types

--- a/charts/vela-core/crds/core.oam.dev_appdeployments.yaml
+++ b/charts/vela-core/crds/core.oam.dev_appdeployments.yaml
@@ -18,7 +18,7 @@ spec:
     singular: appdeployment
   scope: Namespaced
   versions:
-  - name: v1alpha2
+  - name: v1beta1
     schema:
       openAPIV3Schema:
         description: AppDeployment is the Schema for the AppDeployment API
