--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_appdeployments.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_appdeployments.yaml
@@ -183,9 +183,9 @@ spec:
               type: array
           type: object
       type: object
-  version: v1alpha2
+  version: v1beta1
   versions:
-  - name: v1alpha2
+  - name: v1beta1
     served: true
     storage: true
 status:
