--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_scopedefinitions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_scopedefinitions.yaml
@@ -69,6 +69,9 @@ spec:
   versions:
   - name: v1alpha2
     served: true
+    storage: false
+  - name: v1beta1
+    served: true
     storage: true
 status:
   acceptedNames:
