--- a/charts/vela-core/crds/core.oam.dev_applications.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applications.yaml
@@ -1,13 +1,23 @@
-
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
+    cert-manager.io/inject-ca-from: vela-system/kubevela-vela-core-root-cert
     controller-gen.kubebuilder.io/version: v0.2.4
-  creationTimestamp: null
   name: applications.core.oam.dev
 spec:
+  conversion:
+    strategy: Webhook
+    webhook:
+      clientConfig:
+        service:
+          name: vela-core-webhook
+          namespace: vela-system
+          path: /convert
+          port: 443
+      conversionReviewVersions:
+      - v1beta1
+      - v1alpha2
   group: core.oam.dev
   names:
     categories:
@@ -61,14 +71,12 @@ spec:
                             x-kubernetes-preserve-unknown-fields: true
                         required:
                         - name
-                        - properties
                         type: object
                       type: array
                     type:
                       type: string
                   required:
                   - name
-                  - settings
                   - type
                   type: object
                 type: array
@@ -455,15 +463,17 @@ spec:
                 items:
                   description: ApplicationComponent describe the component of application
                   properties:
+                    kind:
+                      type: string
                     name:
                       type: string
+                    properties:
+                      type: object
+                      x-kubernetes-preserve-unknown-fields: true
                     scopes:
                       additionalProperties:
                         type: string
                       description: scopes in ApplicationComponent defines the component-level scopes the format is <scope-type:scope-instance-name> pairs, the key represents type of `ScopeDefinition` while the value represent the name of scope instance.
-                      type: object
-                      x-kubernetes-preserve-unknown-fields: true
-                    settings:
                       type: object
                       x-kubernetes-preserve-unknown-fields: true
                     traits:
@@ -471,22 +481,18 @@ spec:
                       items:
                         description: ApplicationTrait defines the trait of application
                         properties:
-                          name:
+                          kind:
                             type: string
                           properties:
                             type: object
                             x-kubernetes-preserve-unknown-fields: true
                         required:
-                        - name
-                        - properties
+                        - kind
                         type: object
                       type: array
-                    type:
-                      type: string
                   required:
+                  - kind
                   - name
-                  - settings
-                  - type
                   type: object
                 type: array
               rolloutPlan:
