--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
@@ -48,15 +48,17 @@ spec:
                       items:
                         description: ApplicationComponent describe the component of application
                         properties:
+                          kind:
+                            type: string
                           name:
                             type: string
+                          properties:
+                            type: object
+                            
                           scopes:
                             additionalProperties:
                               type: string
                             description: scopes in ApplicationComponent defines the component-level scopes the format is <scope-type:scope-instance-name> pairs, the key represents type of `ScopeDefinition` while the value represent the name of scope instance.
-                            type: object
-                            
-                          settings:
                             type: object
                             
                           traits:
@@ -64,22 +66,18 @@ spec:
                             items:
                               description: ApplicationTrait defines the trait of application
                               properties:
-                                name:
+                                kind:
                                   type: string
                                 properties:
                                   type: object
                                   
                               required:
-                              - name
-                              - properties
+                              - kind
                               type: object
                             type: array
-                          type:
-                            type: string
                         required:
+                        - kind
                         - name
-                        - settings
-                        - type
                         type: object
                       type: array
                     rolloutPlan:
