AppDeployment: Add API types, necessary labels, and utilities

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ vendor/
 
 pkg/test/vela
 config/crd/bases
-tmp/
+_tmp/
 
 references/cmd/cli/fake/source.go
 references/cmd/cli/fake/chart_source.go
