add clone scale handler

--- a/test/e2e-test/testdata/rollout/cloneset/app-source.yaml
+++ b/test/e2e-test/testdata/rollout/cloneset/app-source.yaml
@@ -16,3 +16,4 @@ spec:
         image: stefanprodan/podinfo:4.0.3
         port: 8080
         updateStrategyType: InPlaceIfPossible
+        replicas: 5
