--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
@@ -516,6 +516,49 @@ spec:
                             - release
                             - repository
                             type: object
+                          kube:
+                            description: Kube defines the encapsulation in raw Kubernetes resource format
+                            properties:
+                              parameters:
+                                description: Parameters defines configurable parameters
+                                items:
+                                  description: A KubeParameter defines a configurable parameter of a component.
+                                  properties:
+                                    description:
+                                      description: Description of this parameter.
+                                      type: string
+                                    fieldPaths:
+                                      description: "FieldPaths specifies an array of fields within this workload that will be overwritten by the value of this parameter. \tAll fields must be of the same type. Fields are specified as JSON field paths without a leading dot, for example 'spec.replicas'."
+                                      items:
+                                        type: string
+                                      type: array
+                                    name:
+                                      description: Name of this parameter
+                                      type: string
+                                    required:
+                                      
+                                      description: Required specifies whether or not a value for this parameter must be supplied when authoring an Application.
+                                      type: boolean
+                                    type:
+                                      description: 'ValueType indicates the type of the parameter value, and only supports basic data types: string, number, boolean.'
+                                      enum:
+                                      - string
+                                      - number
+                                      - boolean
+                                      type: string
+                                  required:
+                                  - fieldPaths
+                                  - name
+                                  - type
+                                  type: object
+                                type: array
+                              template:
+                                description: Template defines the raw Kubernetes resource
+                                type: object
+                                
+                            required:
+                            - template
+                            type: object
                         type: object
                       status:
                         description: Status defines the custom health policy and status message for workload
@@ -714,6 +757,49 @@ spec:
                             - release
                             - repository
                             type: object
+                          kube:
+                            description: Kube defines the encapsulation in raw Kubernetes resource format
+                            properties:
+                              parameters:
+                                description: Parameters defines configurable parameters
+                                items:
+                                  description: A KubeParameter defines a configurable parameter of a component.
+                                  properties:
+                                    description:
+                                      description: Description of this parameter.
+                                      type: string
+                                    fieldPaths:
+                                      description: "FieldPaths specifies an array of fields within this workload that will be overwritten by the value of this parameter. \tAll fields must be of the same type. Fields are specified as JSON field paths without a leading dot, for example 'spec.replicas'."
+                                      items:
+                                        type: string
+                                      type: array
+                                    name:
+                                      description: Name of this parameter
+                                      type: string
+                                    required:
+                                      
+                                      description: Required specifies whether or not a value for this parameter must be supplied when authoring an Application.
+                                      type: boolean
+                                    type:
+                                      description: 'ValueType indicates the type of the parameter value, and only supports basic data types: string, number, boolean.'
+                                      enum:
+                                      - string
+                                      - number
+                                      - boolean
+                                      type: string
+                                  required:
+                                  - fieldPaths
+                                  - name
+                                  - type
+                                  type: object
+                                type: array
+                              template:
+                                description: Template defines the raw Kubernetes resource
+                                type: object
+                                
+                            required:
+                            - template
+                            type: object
                         type: object
                       status:
                         description: Status defines the custom health policy and status message for trait
@@ -851,6 +937,49 @@ spec:
                             required:
                             - release
                             - repository
+                            type: object
+                          kube:
+                            description: Kube defines the encapsulation in raw Kubernetes resource format
+                            properties:
+                              parameters:
+                                description: Parameters defines configurable parameters
+                                items:
+                                  description: A KubeParameter defines a configurable parameter of a component.
+                                  properties:
+                                    description:
+                                      description: Description of this parameter.
+                                      type: string
+                                    fieldPaths:
+                                      description: "FieldPaths specifies an array of fields within this workload that will be overwritten by the value of this parameter. \tAll fields must be of the same type. Fields are specified as JSON field paths without a leading dot, for example 'spec.replicas'."
+                                      items:
+                                        type: string
+                                      type: array
+                                    name:
+                                      description: Name of this parameter
+                                      type: string
+                                    required:
+                                      
+                                      description: Required specifies whether or not a value for this parameter must be supplied when authoring an Application.
+                                      type: boolean
+                                    type:
+                                      description: 'ValueType indicates the type of the parameter value, and only supports basic data types: string, number, boolean.'
+                                      enum:
+                                      - string
+                                      - number
+                                      - boolean
+                                      type: string
+                                  required:
+                                  - fieldPaths
+                                  - name
+                                  - type
+                                  type: object
+                                type: array
+                              template:
+                                description: Template defines the raw Kubernetes resource
+                                type: object
+                                
+                            required:
+                            - template
                             type: object
                         type: object
                       status:
