--- a/charts/vela-core/templates/admission-webhooks/validatingWebhookConfiguration.yaml
+++ b/charts/vela-core/templates/admission-webhooks/validatingWebhookConfiguration.yaml
@@ -52,6 +52,7 @@ webhooks:
           - core.oam.dev
         apiVersions:
           - v1alpha2
+          - v1beta1
         operations:
           - CREATE
           - UPDATE
