--- a/docs/examples/cloneset-rollout/app-source.yaml
+++ b/docs/examples/cloneset-rollout/app-source.yaml
@@ -16,3 +16,4 @@ spec:
         image: stefanprodan/podinfo:4.0.6
         port: 8080
         updateStrategyType: InPlaceIfPossible
+        replicas: 5
