--- a/test/e2e-test/testdata/rollout/cloneset/app-more-replica.yaml
+++ b/test/e2e-test/testdata/rollout/cloneset/app-more-replica.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1beta1
 kind: Application
 metadata:
-  name: test-rolling
+  name: test-e2e-rolling
   annotations:
     "app.oam.dev/rolling-components": "metrics-provider"
     "app.oam.dev/rollout-template": "true"
@@ -13,6 +13,7 @@ spec:
         cmd:
           - ./podinfo
           - stress-cpu=1
-        image: stefanprodan/podinfo:4.0.6
+        image: stefanprodan/podinfo:4.0.3
         port: 8080
         updateStrategyType: InPlaceIfPossible
+        replicas: 10
