--- a/test/e2e-test/testdata/rollout/cloneset/app-no-replica.yaml
+++ b/test/e2e-test/testdata/rollout/cloneset/app-no-replica.yaml
@@ -1,7 +1,10 @@
 apiVersion: core.oam.dev/v1beta1
 kind: Application
 metadata:
-  name: test-rolling
+  name: test-e2e-rolling
+  annotations:
+    "app.oam.dev/rolling-components": "metrics-provider"
+    "app.oam.dev/rollout-template": "true"
 spec:
   components:
     - name: metrics-provider
@@ -10,6 +13,6 @@ spec:
         cmd:
           - ./podinfo
           - stress-cpu=1
-        image: stefanprodan/podinfo:5.0.2
+        image: stefanprodan/podinfo:4.0.3
         port: 8080
         updateStrategyType: InPlaceIfPossible
