--- a/test/e2e-test/testdata/rollout/cloneset/clonesetDefinition.yaml
+++ b/test/e2e-test/testdata/rollout/cloneset/clonesetDefinition.yaml
@@ -22,7 +22,9 @@ spec:
               "app.oam.dev/component": context.name
             }
             spec: {
-                replicas: parameter.replicas
+                if parameter["replicas"] != _|_ {
+                    replicas: parameter.replicas
+                }
                 selector: matchLabels: {
                     "app.oam.dev/component": context.name
                 }
@@ -104,5 +106,5 @@ spec:
             // +usage=Cloneset updateStrategy, candidates are `ReCreate`/`InPlaceIfPossible`/`InPlaceOnly`
             updateStrategyType?: string
             // +usage=Number of pods in the cloneset
-            replicas: *5 | int
+            replicas?: int
         }
