make rollout e2e more robust

--- a/test/e2e-test/testdata/rollout/cloneset/app-more-replica.yaml
+++ b/test/e2e-test/testdata/rollout/cloneset/app-more-replica.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1beta1
 kind: Application
 metadata:
-  name: test-e2e-rolling
+  name: test-rolling-pause
   annotations:
     "app.oam.dev/rolling-components": "metrics-provider"
     "app.oam.dev/rollout-template": "true"
