--- a/docs/examples/cloneset-rollout/app-target.yaml
+++ b/docs/examples/cloneset-rollout/app-target.yaml
@@ -16,3 +16,4 @@ spec:
         image: stefanprodan/podinfo:5.0.2
         port: 8080
         updateStrategyType: InPlaceIfPossible
+        replicas: 5
