fix appRollout CRD version (#1303)
* fix appRollout CRD version

* make rollout e2e more robust

--- a/docs/examples/cloneset-rollout/appRollout-finish.yaml
+++ b/docs/examples/cloneset-rollout/appRollout-finish.yaml
@@ -1,10 +1,11 @@
-apiVersion: core.oam.dev/v1alpha2
+apiVersion: core.oam.dev/v1beta1
 kind: AppRollout
 metadata:
-  name: rolling-test
+  name: rolling-example
 spec:
   # application (revision) reference
-  targetAppRevisionName: test-rolling-v1
+  sourceAppRevisionName: test-rolling-v1
+  targetAppRevisionName: test-rolling-v2
   componentList:
     - metrics-provider
   rolloutPlan:
