--- a/docs/examples/cloneset-rollout/appRollout-pause.yaml
+++ b/docs/examples/cloneset-rollout/appRollout-pause.yaml
@@ -1,16 +1,17 @@
 apiVersion: core.oam.dev/v1beta1
 kind: AppRollout
 metadata:
-  name: rolling-test
+  name: rolling-example
 spec:
   # application (revision) reference
-  sourceAppRevisionName: test-rolling-v2
-  targetAppRevisionName: test-rolling-v3
+  sourceAppRevisionName: test-rolling-v1
+  targetAppRevisionName: test-rolling-v2
   componentList:
     - metrics-provider
   rolloutPlan:
     rolloutStrategy: "IncreaseFirst"
     rolloutBatches:
-      - replicas: 20%
-      - replicas: 30%
-      - replicas: 50%
+      - replicas: 10%
+      - replicas: 2
+      - replicas: 2
+    batchPartition: 1
