--- a/docs/examples/kube-module/kube-worker-cd.yaml
+++ b/docs/examples/kube-module/kube-worker-cd.yaml
@@ -2,10 +2,12 @@ apiVersion: core.oam.dev/v1beta1
 kind: ComponentDefinition
 metadata:
   name: kube-worker
-  namespace: vela-system 
+  namespace: default
 spec:
   workload: 
-    type: deployments.apps
+    definition: 
+      apiVersion: apps/v1
+      kind: Deployment
   schematic:
     kube: 
       template:
@@ -22,7 +24,6 @@ spec:
             spec:
               containers:
               - name: nginx
-                image: nginx:1.14.2
                 ports:
                 - containerPort: 80 
       parameters: 
