--- a/docs/examples/dry-run/definitions/myworker.yaml
+++ b/docs/examples/dry-run/definitions/myworker.yaml
@@ -1,10 +1,12 @@
-apiVersion: core.oam.dev/v1alpha2
-kind: WorkloadDefinition
+apiVersion: core.oam.dev/v1beta1
+kind: ComponentDefinition
 metadata:
   name: myworker
 spec:
-  definitionRef:
-    name: deployments.apps
+  workload:
+    definition:
+      apiVersion: apps/v1
+      kind: Deployment
   schematic:
     cue:
       template: |
