--- a/docs/examples/registry/virtualgroup.yaml
+++ b/docs/examples/registry/virtualgroup.yaml
@@ -1,28 +1,30 @@
-apiVersion: core.oam.dev/v1alpha2
+apiVersion: core.oam.dev/v1beta1
 kind: TraitDefinition
 metadata:
   annotations:
     definition.oam.dev/description: "Add virtual group labels"
   name: virtualgroup
+  namespace: vela-system
 spec:
   appliesToWorkloads:
     - webservice
     - worker
-  extension:
-    template: |-
-      patch: {
-      	spec: template: {
-      		metadata: labels: {
-      			if parameter.type == "namespace" {
-      				"app.namespace.virtual.group": parameter.group
-      			}
-      			if parameter.type == "cluster" {
-      				"app.cluster.virtual.group": parameter.group
-      			}
-      		}
-      	}
-      }
-      parameter: {
-      	group: *"default" | string
-      	type:  *"namespace" | string
-      }
+  schematic:
+    cue:
+      template: |-
+        patch: {
+          spec: template: {
+              metadata: labels: {
+                  if parameter.type == "namespace" {
+                      "app.namespace.virtual.group": parameter.group
+                  }
+                  if parameter.type == "cluster" {
+                      "app.cluster.virtual.group": parameter.group
+                  }
+              }
+          }
+        }
+        parameter: {
+          group: *"default" | string
+          type:  *"namespace" | string
+        }
