--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,30 +1,18 @@
 name: docs
 on:
-  pull_request:
-    paths:
-      - 'docs/**'
+  push:
+#    paths:
+#      - 'docs/**'
     branches:
       - master
       - release-*
 jobs:
-  latest:
+  website:
     runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/master' }}
     steps:
       - uses: actions/checkout@v1
-      - name: Push to GitHub Repo
-        uses: sunny0826/auto-docs-action@v0.1.7
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.GH_PAGES_DEPLOY }}
-        with:
-          gh-page: git@github.com:oam-dev/kubevela.io.git
-  released:
-    runs-on: ubuntu-latest
-    if: ${{ github.ref != 'refs/heads/master' }}
-    steps:
-      - uses: actions/checkout@v1
-      - name: Push to GitHub Repo
-        uses: sunny0826/auto-docs-action@v0.1.7
+      - name: Sync to kubevela.io Repo
+        uses: wonderflow/auto-docs-action@master
         env:
           SSH_PRIVATE_KEY: ${{ secrets.GH_PAGES_DEPLOY }}
           VERSION: ${{ github.ref }}
